--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #000;
+    background: whitesmoke;
     margin: 18px;
 }
 
@@ -23,10 +23,9 @@ img:hover {
 
 .header {
     text-align: center;
-    
     margin-top: 12px;
     margin-bottom: 12px;
-    color: aqua;
+    color: black;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 50px;
     font-weight: bolder;
